fix display issues on iOS

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -197,7 +197,7 @@ a { text-decoration: none; display: block; }
 
 
 .handle:active{
-  -webkit-transform: rotate3d(1,0,0, 10deg);
+  -webkit-transform: translate3d(0,0,10px) rotate3d(1,0,0, 10deg);
   -moz-transform: rotate3d(1,0,0, 10deg);
   transform: rotate3d(1,0,0, 10deg);
   /*-webkit-animation: tilt 0.5s ease-in-out infinite;*/
